--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 							</article>
 							<article class="from-right">
 								<a href="images/fulls/02.jpg" class="image fit"><img src="images/thumbs/02.jpg" title="Water Depot" alt="Water Depot template" /></a>
-								<span class="pseudolink" onclick="window.open('https://duartek.github.io/waterdepot.github.io')">
+								<span class="pseudolink" onclick="window.open('https://duartek.github.io/waterdepot.github.io/')">
 									View Design
 								</span>
 							</article>
