--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
 								</span>
 							</article>
 							<article class="from-left">
-								<a href="images/fulls/03.jpg" class="image fit"><img src="images/thumbs/03.jpg" title="Minimalistic Design" alt="Minimalistic Design template" /></a>
-								<span class="pseudolink" onclick="window.open('#')">
+								<a href="images/fulls/03.jpg" class="image fit"><img src="images/thumbs/03.jpg" title="Lang's Photography" alt="Lang's Photography Template" /></a>
+								<span class="pseudolink" onclick="window.open('https://duartek.github.io/langs.github.io/')">
 									View Design
 								</span>
 							</article>
