--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 								</span>
 							</article>
 							<article class="from-right">
-								<a href="images/fulls/04.jpg" class="image fit"><img src="images/thumbs/04.jpg" title="Photographing Studio" alt="Photographing Studio template" /></a>
+								<a href="images/fulls/04.jpg" class="image fit"><img src="images/thumbs/04.jpg" title="Umbrella Designs" alt="Umbrella Designs Template" /></a>
 								<span class="pseudolink" onclick="window.open('#')">
 									View Design
 								</span>
