--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 							</article>
 							<article class="from-right">
 								<a href="images/fulls/04.jpg" class="image fit"><img src="images/thumbs/04.jpg" title="Umbrella Designs" alt="Umbrella Designs Template" /></a>
-								<span class="pseudolink" onclick="window.open('#')">
+								<span class="pseudolink" onclick="window.open('https://duartek.github.io/umbrella.github.io/')">
 									View Design
 								</span>
 							</article>
