--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 						<br>
 						Using HTML, CSS , and Javascript, I build fast and interactive websites. This also may include integrating a CMS. 
 						<br> 
-						Figures show that half of your visitors will visit your website via smartphone or tablet. We ensure that your website also looks great via these media. iPhone or Android, smartphone or tablet, older model or newest model: your website is tested on different platforms. 
+						Figures show that half of your visitors will visit your website via smartphone or tablet. I ensure that your website also looks great via these media. iPhone or Android, smartphone or tablet, older model or newest model: your website is tested on different platforms. 
 						<br>	
 						I will test your website extensively, so that your visitors enjoy an optimal web experience.
 					</p>
