--- a/index.html
+++ b/index.html
@@ -4,15 +4,6 @@
 		<title>Kevin Duarte</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<!-- Global site tag (gtag.js) - Google Analytics -->
-		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-141640241-1"></script>
-		<script>
-		  window.dataLayer = window.dataLayer || [];
-		  function gtag(){dataLayer.push(arguments);}
-		  gtag('js', new Date());
-
-		  gtag('config', 'UA-141640241-1');
-		</script>
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
@@ -20,13 +11,13 @@
 
 		<!-- Header -->
 			<header id="header">
-				<h1><span class="green">K</span>EVIN</h1>
+				<h1><span class="green">D</span>UARTE</h1>
 				<nav>
 					<ul>
 						<li><a href="#intro"><span class="green">I</span>ntro</a></li>
-						<li><a href="#one"><span class="green">W</span>ho I Am</a></li>
+						<li><a href="#one"><span class="green">M</span>e</a></li>
 						<li><a href="#two"><span class="green">M</span>y Vision</a></li>
-						<li><a href="#work"><span class="green">M</span>y Work</a></li>
+						<li><a href="#work"><span class="green">P</span>ortfolio</a></li>
 						<li><a href="#contact"><span class="green">C</span>ontact</a></li>
 					</ul>
 				</nav>
@@ -36,12 +27,14 @@
 			<section id="intro" class="main style1 dark fullscreen">
 				<div class="content">
 					<header>
-						<h2>Designer and Front-end Developer</h2>
+						<h2>Web Designer / Developer and SEO consultant</h2>
 					</header>
-					<p class="sub-heading">With specialty in front-end development, functionality, UX design, and search engine optimization. I <strong>Design and code</strong> beautifully, simple things.</p>
+					<p class="sub-heading">I always keep it simple. My primary goal is to focus on content and conveying the message that you want to send.</p>
+					<!--
 					<footer>
 						<a href="#one" class="button style2 down">More</a>
 					</footer>
+					-->
 				</div>
 			</section>
 
@@ -49,15 +42,19 @@
 			<section id="one" class="main style2 right dark fullscreen">
 				<div class="content box style2">
 					<header>
-						<h2>Who I AM</h2>
+						<h2>Me</h2>
 					</header>
-					<p> Hi, I'm Kevin. Nice to meet you, I like to code things from scratch, and enjoy bringing ideas to life in the browser. 
+					<p> Hi, I'm Kevin Duarte. Nice to meet you, I like to code things from scratch, and focus on crafting clean & user‑friendly experiences.
 						<br>
-						Since beginning my journey as a freelance designer and developer, I've done remote work for small business and consulted for startups. I'm quietly confident, naturally curious, 
+						I've done remote work for small business and consulted for startups. I'm quietly confident 
 						and perpetually working on improving my chops one design problem at a time.
+						<br>
+						I also have skills in Search Engine Optimization <strong>(SEO)</strong> and can help you get your website to the top of the search engines maximizing traffic. 
 					</p>
 				</div>
+				<!--
 				<a href="#two" class="button style2 down anchored">Next</a>
+				-->
 			</section>
 
 		<!-- Two -->
@@ -68,14 +65,16 @@
 					</header>
 					<p> I stand for quality web design tailored to the customer at an affordable price and suitable for all contemporary media. 
 						<br>
-						Using HTML, CSS , and Javascript, I build fast and interactive websites. This also may include integrating a CMS. 
+						Using <strong>HTML</strong>, <strong>CSS</strong>, and <strong>JavaScript</strong>, I build fast and interactive websites. This also may include integrating a CMS like <strong>WordPress</strong>. 
 						<br> 
-						Figures show that half of your visitors will visit your website via smartphone or tablet. I ensure that your website also looks great via these media. iPhone or Android, smartphone or tablet, older model or newest model: your website is tested on different platforms. 
+						Figures show that half of your visitors will visit your website via smartphone or tablet. I make sure that your website also looks great via these media. iPhone or Android, smartphone or tablet, older model or newest model. 
 						<br>	
 						I will test your website extensively, so that your visitors enjoy an optimal web experience.
 					</p>
 				</div>
+				<!--
 				<a href="#work" class="button style2 down anchored">Next</a>
+				-->
 			</section>
 
 		<!-- Work -->
@@ -89,14 +88,14 @@
 					<!-- Gallery  -->
 						<div class="gallery">
 							<article class="from-left">
-								<a href="images/fulls/01.jpg" class="image fit"><img src="images/thumbs/01.jpg" title="Casa Valencia Assisted living" alt="Casa Valencia Assisted living Website" /></a>
+								<a href="images/fulls/01.png" class="image fit"><img src="images/thumbs/01.png" title="Casa Valencia Assisted living" alt="Assisted living" /></a>
 								<span class="pseudolink" onclick="window.open('http://www.casavalencianm.com')">
 									View Site
 								</span>
 							</article>
 							<article class="from-right">
-								<a href="images/fulls/02.jpg" class="image fit"><img src="images/thumbs/02.jpg" title="Water Depot" alt="Water Depot template" /></a>
-								<span class="pseudolink" onclick="window.open('https://duartek.github.io/waterdepot.github.io/')">
+								<a href="images/fulls/02.png" class="image fit"><img src="images/thumbs/02.png" title="Equipales" alt="Equipales Store" /></a>
+								<span class="pseudolink" onclick="window.open('https://duartek.github.io/furniture.github.io/')">
 									View Design
 								</span>
 							</article>
@@ -122,7 +121,7 @@
 				<div class="content">
 					<header>
 						<h2>Start a Project</h2>
-						<p>Interested in Working together? Let's Talk. I'll buy the coffee.</p>
+						<p>Interested in Working together? Let's Talk.</p>
 					</header>
 					<div class="box">
 						<form method="POST" action="https://formspree.io/duartedevs@gmail.com">
