--- a/index.html
+++ b/index.html
@@ -88,13 +88,13 @@
 					<!-- Gallery  -->
 						<div class="gallery">
 							<article class="from-left">
-								<a href="images/fulls/01.png" class="image fit"><img src="images/thumbs/01.jpg" title="Casa Valencia Assisted living" alt="Assisted living" /></a>
+								<a href="images/fulls/01.jpg" class="image fit"><img src="images/thumbs/01.jpg" title="Casa Valencia Assisted living" alt="Assisted living" /></a>
 								<span class="pseudolink" onclick="window.open('http://www.casavalencianm.com')">
 									View Site
 								</span>
 							</article>
 							<article class="from-right">
-								<a href="images/fulls/02.png" class="image fit"><img src="images/thumbs/02.jpg" title="Equipales" alt="Equipales Store" /></a>
+								<a href="images/fulls/02.jpg" class="image fit"><img src="images/thumbs/02.jpg" title="Equipales" alt="Equipales Store" /></a>
 								<span class="pseudolink" onclick="window.open('https://duartek.github.io/furniture.github.io/')">
 									View Design
 								</span>
