--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 <html lang="en">
 	<head>
 		<title>Kevin Duarte</title>
-		<meta name="description" content="Hi, my name is Kevin Duarte. I am a web developer/ designer and SEO consultant. I like to keep it simple. My primary goal is to focus on content and conveying the message you want to send.">
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="author" content="Kevin Duarte">
+		<meta property="og:title" content="Kevin Duarte">
+		<meta name="description" content="Hi, my name is Kevin Duarte. I am a web developer/ designer and SEO consultant. I like to keep it simple. My primary goal is to focus on content and conveying the message you want to send.">	
+		<meta property="og:description" content="Hi, my name is Kevin Duarte. I am a web developer/ designer and SEO consultant. I like to keep it simple. My primary goal is to focus on content and conveying the message you want to send.">
+		<link rel="stylesheet" href="assets/css/main.css">
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
