--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en">
 	<head>
-		<title>Kevin Duarte</title>
+		<title>Kevin Duarte | Web Designer, Front-end Developer and SEO Consultant</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="author" content="Kevin Duarte">
