--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <html lang="en">
 	<head>
 		<title>Kevin Duarte | Web Designer, Front-end Developer and SEO Consultant</title>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta name="author" content="Kevin Duarte">
-		<meta property="og:title" content="Kevin Duarte">
-		<meta name="description" content="Hi, my name is Kevin Duarte. I am a web developer/ designer and SEO consultant. I like to keep it simple. My primary goal is to focus on content and conveying the message you want to send.">	
-		<meta property="og:description" content="Hi, my name is Kevin Duarte. I am a web developer/ designer and SEO consultant. I like to keep it simple. My primary goal is to focus on content and conveying the message you want to send.">
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta name="author" content="Kevin Duarte" />
+		<meta property="og:title" content="Kevin Duarte" />
+		<meta name="description" content="Hi, my name is Kevin Duarte. I am a web developer/ designer and SEO consultant. I like to keep it simple. My primary goal is to focus on content and conveying the message you want to send." />	
+		<meta property="og:description" content="Hi, my name is Kevin Duarte. I am a web developer/ designer and SEO consultant. I like to keep it simple. My primary goal is to focus on content and conveying the message you want to send." />
+		<meta name="keywords" content="Duarte, Kevin Duarte, SEO consultant" />
 		<meta name="google-site-verification" content="JOPWWjzbwwzb_9ET_cSW5v2uTACv3xz6OlxRT8YtTwQ" />
-		<link rel="stylesheet" href="assets/css/main.css">
+		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
