--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<meta name="description" content="Hi, my name is Kevin Duarte. I am a web developer/ designer and SEO consultant. I like to keep it simple. My primary goal is to focus on content and conveying the message you want to send." />	
 		<meta property="og:description" content="Hi, my name is Kevin Duarte. I am a web developer/ designer and SEO consultant. I like to keep it simple. My primary goal is to focus on content and conveying the message you want to send." />
 		<meta name="keywords" content="Duarte, Kevin Duarte, SEO consultant" />
+		<meta name="robots" content="index,follow" />
 		<meta name="google-site-verification" content="JOPWWjzbwwzb_9ET_cSW5v2uTACv3xz6OlxRT8YtTwQ" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
