--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="author" content="Kevin Duarte" />
 		<meta property="og:title" content="Kevin Duarte" />
-		<meta name="description" content="Hi, my name is Kevin Duarte. I am a web developer/ designer and SEO consultant. I like to keep it simple. My primary goal is to focus on content and conveying the message you want to send." />	
-		<meta property="og:description" content="Hi, my name is Kevin Duarte. I am a web developer/ designer and SEO consultant. I like to keep it simple. My primary goal is to focus on content and conveying the message you want to send." />
-		<meta name="keywords" content="Duarte, Kevin Duarte, SEO consultant" />
+		<meta name="description" content="Affordable Web development/ design and SEO services. I like to keep it simple. My primary goal is to focus on content and conveying the message you want to send." />	
+		<meta property="og:description" content="Affordable Web development/ design and SEO services. I like to keep it simple. My primary goal is to focus on content and conveying the message you want to send." />
+		<meta name="keywords" content="Duarte, Kevin Duarte, SEO consultant, Albuquerque web designer, Albuquerque SEO, Albuquerque" />
 		<meta name="robots" content="index,follow" />
 		<meta name="google-site-verification" content="JOPWWjzbwwzb_9ET_cSW5v2uTACv3xz6OlxRT8YtTwQ" />
 		<link rel="stylesheet" href="assets/css/main.css" />
