--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="author" content="Kevin Duarte" />
 		<meta property="og:title" content="Kevin Duarte" />
-		<meta name="description" content="Affordable Web development/ design and SEO services. I like to keep it simple. My primary goal is to focus on content and conveying the message you want to send." />	
-		<meta property="og:description" content="Affordable Web development/ design and SEO services. I like to keep it simple. My primary goal is to focus on content and conveying the message you want to send." />
+		<meta name="description" content="Affordable Web development/ design and SEO services based in Albuquerque. I like to keep it simple. My primary goal is to focus on content and conveying the message you want to send." />	
+		<meta property="og:description" content="Affordable Web development/ design and SEO services based in Albuquerque. I like to keep it simple. My primary goal is to focus on content and conveying the message you want to send." />
 		<meta name="keywords" content="Duarte, Kevin Duarte, SEO consultant, Albuquerque web designer, Albuquerque SEO, Albuquerque" />
 		<meta name="robots" content="index,follow" />
 		<meta name="google-site-verification" content="JOPWWjzbwwzb_9ET_cSW5v2uTACv3xz6OlxRT8YtTwQ" />
