--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<meta property="og:title" content="Kevin Duarte" />
 		<meta name="description" content="Affordable Web development/ design and SEO services based in Albuquerque. I like to keep it simple. My primary goal is to focus on content and conveying the message you want to send." />	
 		<meta property="og:description" content="Affordable Web development/ design and SEO services based in Albuquerque. I like to keep it simple. My primary goal is to focus on content and conveying the message you want to send." />
-		<meta name="keywords" content="Duarte, Kevin Duarte, SEO consultant, Albuquerque web designer, Albuquerque SEO, Albuquerque" />
+		<meta name="keywords" content="Duarte, Kevin Duarte, SEO consultant, web developer albuquerque, Albuquerque, search engine ranking, website at a affordable price" />
 		<meta name="robots" content="index,follow" />
 		<meta name="google-site-verification" content="JOPWWjzbwwzb_9ET_cSW5v2uTACv3xz6OlxRT8YtTwQ" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -61,12 +61,12 @@
 					<header>
 						<h2>Me</h2>
 					</header>
-					<p> Hi, I'm Kevin Duarte. Nice to meet you, I like to code things from scratch, and focus on crafting clean & user‑friendly experiences.
+					<p> Hi, I'm Kevin Duarte. I am a web developer/ designer and SEO consultant based in Albuquerque, New Mexico. I like to code things from scratch, and focus on crafting clean & user‑friendly experiences.
 						<br>
-						I've done remote work for small business and consulted for startups. I'm quietly confident 
-						and perpetually working on improving my chops one design problem at a time.
+						I've done remote work for small business including design, developing and setting up Google Analytics Tracking to their website at a affordable price. I'm quietly confident 
+						and constantly working on improving my design and developer skills one project at a time.
 						<br>
-						I also have skills in Search Engine Optimization <strong>(SEO)</strong> and can help you get your website to the top of the search engines maximizing traffic. 
+						I also have experience in Search Engine Optimization <strong>(SEO)</strong> and can help you get your website to the top of the search engine ranking maximizing traffic. 
 					</p>
 				</div>
 				<!--
@@ -80,7 +80,7 @@
 					<header>
 						<h2>My Vision</h2>
 					</header>
-					<p> I stand for quality web design tailored to the customer at an affordable price and suitable for all contemporary media. 
+					<p> I stand for quality, affordable web design tailored to the customer and suitable for all present-day media. 
 						<br>
 						Using <strong>HTML</strong>, <strong>CSS</strong>, and <strong>JavaScript</strong>, I build fast and interactive websites. This also may include integrating a CMS like <strong>WordPress</strong>. 
 						<br> 
