--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 					<header>
 						<h2>Me</h2>
 					</header>
-					<p> Hi, I'm Kevin Duarte. I am a web developer/ designer and SEO consultant based in Albuquerque, New Mexico. I like to code things from scratch, and focus on crafting clean & user‑friendly experiences.
+					<p> Hi, I'm Kevin Duarte. I am a web developer/ designer and SEO consultant based in Albuquerque, New Mexico. I like to code things from scratch and focus on crafting clean & user‑friendly experiences.
 						<br>
 						I've done remote work for small business including design, developing and setting up Google Analytics Tracking to their website at a affordable price. I'm quietly confident 
 						and constantly working on improving my design and developer skills one project at a time.
