--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<meta property="og:title" content="Kevin Duarte" />
 		<meta name="description" content="Affordable Web development/ design and SEO services based in Albuquerque. I like to keep it simple. My primary goal is to focus on content and conveying the message you want to send." />	
 		<meta property="og:description" content="Affordable Web development/ design and SEO services based in Albuquerque. I like to keep it simple. My primary goal is to focus on content and conveying the message you want to send." />
-		<meta name="keywords" content="Duarte, Kevin Duarte, SEO consultant, web developer albuquerque, Albuquerque, search engine ranking, website at a affordable price" />
+		<meta name="keywords" content="Duarte, Kevin Duarte, web designer, SEO consultant, web developer albuquerque, Albuquerque, search engine ranking, website at a affordable price, web designer for small business, web developer/ designer, in albuquerque, my vision" />
 		<meta name="robots" content="index,follow" />
 		<meta name="google-site-verification" content="JOPWWjzbwwzb_9ET_cSW5v2uTACv3xz6OlxRT8YtTwQ" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -44,7 +44,7 @@
 			<section id="intro" class="main style1 dark fullscreen">
 				<div class="content">
 					<header>
-						<h2>Web Designer / Developer and SEO consultant</h2>
+						<h1>Web Designer / Developer and SEO consultant</h1>
 					</header>
 					<p class="sub-heading">I always keep it simple. My primary goal is to focus on content and conveying the message that you want to send.</p>
 					<!--
@@ -113,7 +113,7 @@
 							<article class="from-right">
 								<a href="images/fulls/02.jpg" class="image fit"><img src="images/thumbs/02.jpg" title="Equipales" alt="Equipales Store" /></a>
 								<span class="pseudolink" onclick="window.open('https://duartek.github.io/furniture.github.io/')">
-									View Design
+									View Site
 								</span>
 							</article>
 							<article class="from-left">
@@ -181,10 +181,4 @@
 			<script src="assets/js/main.js"></script>
 
 	</body>
-
-	<!--
-	Big Picture by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
-	-->
 </html>
