--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 
 				<!-- Icons -->
 					<ul class="icons">
-						<li><a href="mailto:duartedevs@gmail.com" class="icon fa-envelope"><span class="label">LinkedIn</span></a></li>
+						<li><a href="mailto:duartedevs@gmail.com" class="icon fa-envelope" alt="email"><span class="label">LinkedIn</span></a></li>
 					</ul>
 
 				<!-- Menu -->
