--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				<nav>
 					<ul>
 						<li><a href="#intro"><span class="green">I</span>ntro</a></li>
-						<li><a href="#one"><span class="green">M</span>e</a></li>
+						<li><a href="#one"><span class="green">D</span>uarte</a></li>
 						<li><a href="#two"><span class="green">M</span>y Vision</a></li>
 						<li><a href="#work"><span class="green">P</span>ortfolio</a></li>
 						<li><a href="#contact"><span class="green">C</span>ontact</a></li>
