--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 			<section id="one" class="main style2 right dark fullscreen">
 				<div class="content box style2">
 					<header>
-						<h2>Me</h2>
+						<h2>Duarte</h2>
 					</header>
 					<p> Hi, I'm Kevin Duarte. I am a web developer/ designer and SEO consultant based in Albuquerque, New Mexico. I like to code things from scratch and focus on crafting clean & user‑friendly experiences.
 						<br>
