--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 			<section id="intro" class="main style1 dark fullscreen">
 				<div class="content">
 					<header>
-						<h1>Web Designer / Developer and SEO consultant</h1>
+						<h1>Front-End Developer and SEO consultant</h1>
 					</header>
 					<p class="sub-heading">I always keep it simple. My primary goal is to focus on content and conveying the message that you want to send.</p>
 					<!--
@@ -61,7 +61,7 @@
 					<header>
 						<h2>Duarte</h2>
 					</header>
-					<p> Hi, I'm Kevin Duarte. I am a web developer/ designer and SEO consultant based in Albuquerque, New Mexico. I like to code things from scratch and focus on crafting clean & user‑friendly experiences.
+					<p> Hi, I'm Kevin Duarte. I am a Front-End Developer and SEO consultant based in Albuquerque, New Mexico. I like to code things from scratch and focus on crafting clean & user‑friendly experiences.
 						<br>
 						I've done remote work for small business including design, developing and setting up Google Analytics Tracking to their website at a affordable price. I'm quietly confident 
 						and constantly working on improving my design and developer skills one project at a time.
