--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 					</header>
 					<p> Hi, I'm Kevin Duarte. I am a Front-End Developer and SEO consultant based in Albuquerque, New Mexico. I like to code things from scratch and focus on crafting clean & user‑friendly experiences.
 						<br>
-						I've done remote work for small business including design, developing and setting up Google Analytics Tracking to their website at a affordable price. I'm quietly confident 
+						I've done remote work for small business including web design / developing and setting up Google Analytics Tracking to their website at a affordable price. I'm quietly confident 
 						and constantly working on improving my design and developer skills one project at a time.
 						<br>
 						I also have experience in Search Engine Optimization <strong>(SEO)</strong> and can help you get your website to the top of the search engine ranking maximizing traffic. 
