--- a/index.html
+++ b/index.html
@@ -105,15 +105,15 @@
 					<!-- Gallery  -->
 						<div class="gallery">
 							<article class="from-left">
-								<a href="images/fulls/01.jpg" class="image fit"><img src="images/thumbs/01.jpg" title="Casa Valencia Assisted living" alt="Assisted living" /></a>
-								<span class="pseudolink" onclick="window.open('http://www.casavalencianm.com')">
-									View Site
+								<a href="images/fulls/01.jpg" class="image fit"><img src="images/thumbs/01.jpg" title="Adventure" alt="Adventure Website" /></a>
+								<span class="pseudolink" onclick="window.open('https://duartek.github.io/adventure.github.io/')">
+									View Design
 								</span>
 							</article>
 							<article class="from-right">
 								<a href="images/fulls/02.jpg" class="image fit"><img src="images/thumbs/02.jpg" title="Equipales" alt="Equipales Store" /></a>
 								<span class="pseudolink" onclick="window.open('https://duartek.github.io/furniture.github.io/')">
-									View Site
+									View Design
 								</span>
 							</article>
 							<article class="from-left">
