--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 			<section id="intro" class="main style1 dark fullscreen">
 				<div class="content">
 					<header>
-						<h1>Front-End Developer and SEO consultant</h1>
+						<h1>Front-End Developer</h1>
 					</header>
 					<p class="sub-heading">I always keep it simple. My primary goal is to focus on content and conveying the message that you want to send.</p>
 					<!--
