--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		gtag('config', 'UA-146496741-1');
 		</script>
 
-		<title>Kevin Duarte | Web Designer, Front-end Developer and SEO Consultant</title>
+		<title>Kevin Duarte | Front-end Developer</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="author" content="Kevin Duarte" />
