--- a/index.html
+++ b/index.html
@@ -11,15 +11,22 @@
 		gtag('config', 'UA-146496741-1');
 		</script>
 
-		<title>Kevin Duarte | Front-end Developer</title>
 		<meta charset="utf-8" />
+		<title>Kevin Duarte | Front-end Developer</title>
+		<meta name="title" content="Kevin Duarte | Front-end Developer">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="author" content="Kevin Duarte" />
-		<meta property="og:title" content="Kevin Duarte" />
 		<meta name="description" content="Affordable Web development/ design and SEO services based in Albuquerque. I like to keep it simple. My primary goal is to focus on content and conveying the message you want to send." />	
-		<meta property="og:description" content="Affordable Web development/ design and SEO services based in Albuquerque. I like to keep it simple. My primary goal is to focus on content and conveying the message you want to send." />
 		<meta name="keywords" content="Duarte, Kevin Duarte, web designer, SEO consultant, web developer albuquerque, Albuquerque, search engine ranking, website at a affordable price, web designer for small business, web developer/ designer, in albuquerque, my vision" />
 		<meta name="robots" content="index,follow" />
+		<meta property="og:type" content="website">
+		<meta property="og:url" content="https://duartek.github.io/">
+		<meta property="og:title" content="Kevin Duarte | Front-end Developer">
+		<meta property="og:description" content="Affordable Web development/ design and SEO services based in Albuquerque. I like to keep it simple. My primary goal is to focus on content and conveying the message you want to send.">
+		<meta property="twitter:card" content="summary_large_image">
+		<meta property="twitter:url" content="https://duartek.github.io/">
+		<meta property="twitter:title" content="Kevin Duarte | Front-end Developer">
+		<meta property="twitter:description" content="Affordable Web development/ design and SEO services based in Albuquerque. I like to keep it simple. My primary goal is to focus on content and conveying the message you want to send.">
 		<meta name="google-site-verification" content="JOPWWjzbwwzb_9ET_cSW5v2uTACv3xz6OlxRT8YtTwQ" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
