--- a/index.html
+++ b/index.html
@@ -124,13 +124,13 @@
 								</span>
 							</article>
 							<article class="from-left">
-								<a href="images/fulls/03.jpg" class="image fit"><img src="images/thumbs/03.jpg" title="Lang's Photography" alt="Lang's Photography Template" /></a>
+								<a href="images/fulls/Fylo.jpg" class="image fit"><img src="images/thumbs/Fylo_600x315.jpg" title="Lang's Photography" alt="Lang's Photography Template" /></a>
 								<span class="pseudolink" onclick="window.open('https://duartek.github.io/langs.github.io/')">
 									View Design
 								</span>
 							</article>
 							<article class="from-right">
-								<a href="images/fulls/04.jpg" class="image fit"><img src="images/thumbs/04.jpg" title="Umbrella Designs" alt="Umbrella Designs Template" /></a>
+								<a href="images/fulls/huddle.jpg" class="image fit"><img src="images/thumbs/huddle_600x315.jpg" title="Umbrella Designs" alt="Umbrella Designs Template" /></a>
 								<span class="pseudolink" onclick="window.open('https://duartek.github.io/umbrella.github.io/')">
 									View Design
 								</span>
