--- a/index.html
+++ b/index.html
@@ -112,13 +112,13 @@
 					<!-- Gallery  -->
 						<div class="gallery">
 							<article class="from-left">
-								<a href="images/fulls/Fylo.jpg" class="image fit"><img src="images/thumbs/Fylo_600x315.jpg" title="Lang's Photography" alt="Lang's Photography Template" /></a>
+								<a href="images/fulls/Fylo.jpg" class="image fit"><img src="images/thumbs/Fylo_600x315.jpg" title="Fylo" alt="Fylo Template" /></a>
 								<span class="pseudolink" onclick="window.open('https://duartek.github.io/fylo.github.io/')">
 									View Design
 								</span>
 							</article>
 							<article class="from-right">
-								<a href="images/fulls/huddle.jpg" class="image fit"><img src="images/thumbs/huddle_600x315.jpg" title="Umbrella Designs" alt="Umbrella Designs Template" /></a>
+								<a href="images/fulls/huddle.jpg" class="image fit"><img src="images/thumbs/huddle_600x315.jpg" title="Huddle alt="Huddle Template" /></a>
 								<span class="pseudolink" onclick="window.open('https://duartek.github.io/huddle.github.io/')">
 									View Design
 								</span>
