--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 								</span>
 							</article>
 							<article class="from-right">
-								<a href="images/fulls/huddle.jpg" class="image fit"><img src="images/thumbs/huddle_600x315.jpg" title="Huddle alt="Huddle Template" /></a>
+								<a href="images/fulls/huddle.jpg" class="image fit"><img src="images/thumbs/huddle_600x315.jpg" title="Huddle" alt="Huddle Template" /></a>
 								<span class="pseudolink" onclick="window.open('https://duartek.github.io/huddle.github.io/')">
 									View Design
 								</span>
