--- a/index.html
+++ b/index.html
@@ -116,6 +116,9 @@
 								<span class="pseudolink" onclick="window.open('https://duartek.github.io/fylo.github.io/')">
 									View Design
 								</span>
+								<span class="pseudolink" onclick="window.open('https://github.com/Duartek/fylo')">
+									View Code
+								</span>
 							</article>
 							<article class="from-right">
 								<a href="images/fulls/huddle.jpg" class="image fit"><img src="images/thumbs/huddle_600x315.jpg" title="Huddle" alt="Huddle Template" /></a>
