--- a/index.html
+++ b/index.html
@@ -169,7 +169,15 @@
 
 				<!-- Icons -->
 					<ul class="icons">
-						<li><a href="mailto:duartedevs@gmail.com" class="icon fa-envelope" alt="email"><span class="label">LinkedIn</span></a></li>
+						<li>
+							<a href="mailto:duartedevs@gmail.com" class="icon fa-envelope" alt="email"><span class="label">Email</span></a>
+						</li>
+						<li>
+							<a href="https://codepen.io/Duartek" class="icon fa-codepen" alt="codepen"><span class="label">Codepen</span></a>
+						</li>
+						<li>
+							<a href="https://github.com/duartek" class="icon fa-github" alt="github"><span class="label">Github</span></a>
+						</li>
 					</ul>
 
 				<!-- Menu -->
