--- a/index.html
+++ b/index.html
@@ -124,17 +124,26 @@
 								<span class="pseudolink" onclick="window.open('https://duartek.github.io/huddle.github.io/')">
 									View Design
 								</span>
+								<span class="pseudolink" onclick="window.open('https://github.com/Duartek/fylo')">
+									View Code
+								</span>
 							</article>
 							<article class="from-left">
 								<a href="images/fulls/01.jpg" class="image fit"><img src="images/thumbs/01.jpg" title="Adventure" alt="Adventure Website" /></a>
-								<span class="pseudolink" onclick="window.open('https://duartek.github.io/adventure.github.io/')">
+								<span class="pseudolink" onclick="window.open('https://github.com/Duartek/huddle')">
 									View Design
+								</span>
+								<span class="pseudolink" onclick="window.open('https://github.com/Duartek/adventure.github.io')">
+									View Code
 								</span>
 							</article>
 							<article class="from-right">
 								<a href="images/fulls/02.jpg" class="image fit"><img src="images/thumbs/02.jpg" title="Equipales" alt="Equipales Store" /></a>
 								<span class="pseudolink" onclick="window.open('https://duartek.github.io/furniture.github.io/')">
 									View Design
+								</span>
+								<span class="pseudolink" onclick="window.open('https://github.com/Duartek/furniture.github.io')">
+									View Code
 								</span>
 							</article>
 						</div>
