--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 						<div class="gallery">
 							<article class="from-left">
 								<a href="images/fulls/Fylo.jpg" class="image fit"><img src="images/thumbs/Fylo_600x315.jpg" title="Fylo" alt="Fylo Template" /></a>
-								<span class="pseudolink" onclick="window.open('https://duartek.github.io/fylo.github.io/')">
+								<span class="pseudolink" onclick="window.open('https://duartek.github.io/fylo/')">
 									View Design
 								</span>
 								<span class="pseudolink" onclick="window.open('https://github.com/Duartek/fylo')">
@@ -124,13 +124,13 @@
 								<span class="pseudolink" onclick="window.open('https://duartek.github.io/huddle.github.io/')">
 									View Design
 								</span>
-								<span class="pseudolink" onclick="window.open('https://github.com/Duartek/fylo')">
+								<span class="pseudolink" onclick="window.open('https://duartek.github.io/huddle/')">
 									View Code
 								</span>
 							</article>
 							<article class="from-left">
 								<a href="images/fulls/01.jpg" class="image fit"><img src="images/thumbs/01.jpg" title="Adventure" alt="Adventure Website" /></a>
-								<span class="pseudolink" onclick="window.open('https://github.com/Duartek/huddle')">
+								<span class="pseudolink" onclick="window.open('https://duartek.github.io/adventure.github.io/')">
 									View Design
 								</span>
 								<span class="pseudolink" onclick="window.open('https://github.com/Duartek/adventure.github.io')">
