--- a/index.html
+++ b/index.html
@@ -121,10 +121,10 @@
 							</article>
 							<article class="from-right">
 								<a href="images/fulls/huddle.jpg" class="image fit"><img src="images/thumbs/huddle_600x315.jpg" title="Huddle" alt="Huddle Template" /></a>
-								<span class="pseudolink" onclick="window.open('https://duartek.github.io/huddle.github.io/')">
+								<span class="pseudolink" onclick="window.open('https://duartek.github.io/huddle/')">
 									View Design
 								</span>
-								<span class="pseudolink" onclick="window.open('https://duartek.github.io/huddle/')">
+								<span class="pseudolink" onclick="window.open('https://github.com/Duartek/huddle')">
 									View Code
 								</span>
 							</article>
